--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie_api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -19,6 +19,11 @@
   },
   "homepage": "https://github.com/Trevor2492/movie_api#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.20"
+  },
+  "devDependencies": {
+    "eslint": "^7.10.0"
   }
 }
