--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "mongoose": "^5.10.9",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
